# Task-Manager

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: workflow.yml
labels/: admin.py  models.py  urls.py  views.py
labels/migrations/: 0001_initial.py
labels/tests/: test_label.py
statuses/: admin.py  models.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
statuses/tests/: test_status.py
task_manager/: filters.py  models.py  settings.py  urls.py  views.py
task_manager/tests/: test_auth.py  test_filter.py  test_label.py  test_status.py  test_task.py
tasks/: admin.py  filters.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
tasks/tests/: test_filter.py  test_task.py
templates/: index.html
templates/auth/: login.html  registrations.html  update_user.html  users.html
templates/label/: create_label.html  delete_label.html  labels.html
templates/status/: create_status.html  statuses.html  update_status.html
templates/task/: create_task.html  task_detail.html  tasks.html  update_task.html
users/: urls.py  views.py
users/tests/: test_users.py
