[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.13.4",
    "django>=6.0.2",
    "django-bootstrap5>=26.2",
    "django-filter>=25.2",
    "dotenv>=0.9.9",
    "gunicorn>=25.1.0",
    "psycopg2-binary>=2.9.0",
    "rollbar>=1.3.0",
    "ruff>=0.15.2",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
]
